# discord-bots

./: .gitignore  .oxlintrc.json  DEVELOPMENT.md  README.md  SETUP.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  turbo.json
.github/workflows/: ci.yml
apps/jogi-bot/: .env.example  Containerfile  package.json
apps/jogi-bot/src/: config.ts  index.ts
apps/jogi-bot/src/features/: gacha.ts  kawaii.ts
apps/toy-bear-bot/: .env.example  Containerfile  package.json
apps/toy-bear-bot/src/: config.ts  deploy-commands.ts  index.ts
apps/toy-bear-bot/src/features/: eyes-lips.ts  gacha.ts  kawaii.ts
apps/toy-bear-bot/src/features/gacha/: gacha-core.test.ts  gacha-core.ts  gacha.ts
apps/toy-bear-bot/src/features/superchat/: index.ts  superchat.ts
bots/eyes-lips-bot/: Containerfile  package.json
bots/kawaii-bot/: .env.example  Containerfile  README.md  docker-compose.yml  package.json
bots/kawaii-bot/src/: bot.js  config.js  index.js
docs/: CONTRIBUTING.md
scripts/: register-commands.js
services/text-gacha/: Containerfile  text-gacha.cabal
services/text-gacha/src/: Gacha.hs  Main.hs  Server.hs
