cabal-version:      3.0
name:               text-gacha
version:            0.1.0.0
synopsis:           HTTP service for gacha-style text shuffling
license:            MIT
build-type:         Simple

executable text-gacha
    main-is:          Main.hs
    other-modules:
        Server
        Gacha
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:
        -Wall
        -Wcompat
        -threaded
        -rtsopts
        -with-rtsopts=-N

    build-depends:
        base       >= 4.18,
        warp       ^>= 3.4,
        wai        ^>= 3.2,
        wai-extra  ^>= 3.1,
        aeson      ^>= 2.2,
        text       ^>= 2.1,
        bytestring ^>= 0.12,
        random     ^>= 1.2,
        http-types ^>= 0.12
